@@ -19,19 +19,18 @@
 package org.apache.pinot.query.runtime.operator;
 
 import com.google.common.annotations.VisibleForTesting;
-import com.google.common.collect.ImmutableList;
+import com.google.common.base.Joiner;
 import java.util.ArrayList;
-import java.util.LinkedList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.PriorityQueue;
-import javax.annotation.Nullable;
 import org.apache.calcite.rel.RelFieldCollation;
 import org.apache.pinot.common.datablock.DataBlock;
+import org.apache.pinot.common.datatable.StatMap;
 import org.apache.pinot.common.utils.DataSchema;
 import org.apache.pinot.core.query.selection.SelectionOperatorUtils;
-import org.apache.pinot.query.planner.logical.RexExpression;
+import org.apache.pinot.query.planner.plannode.SortNode;
 import org.apache.pinot.query.runtime.blocks.TransferableBlock;
-import org.apache.pinot.query.runtime.blocks.TransferableBlockUtils;
 import org.apache.pinot.query.runtime.operator.utils.SortUtils;
 import org.apache.pinot.query.runtime.plan.OpChainExecutionContext;
 import org.apache.pinot.spi.utils.CommonConstants;
@@ -43,64 +42,74 @@ public class SortOperator extends MultiStageOperator {
   private static final String EXPLAIN_NAME = "SORT";
   private static final Logger LOGGER = LoggerFactory.getLogger(SortOperator.class);
 
-  private final MultiStageOperator _upstreamOperator;
-  private final int _fetch;
-  private final int _offset;
+  private final MultiStageOperator _input;
   private final DataSchema _dataSchema;
+  private final int _offset;
+  private final int _numRowsToKeep;
   private final PriorityQueue<Object[]> _priorityQueue;
   private final ArrayList<Object[]> _rows;
-  private final int _numRowsToKeep;
+  private final StatMap<StatKey> _statMap = new StatMap<>(StatKey.class);
 
   private boolean _hasConstructedSortedBlock;
+  private TransferableBlock _eosBlock;
 
-  public SortOperator(OpChainExecutionContext context, MultiStageOperator upstreamOperator,
-      List<RexExpression> collationKeys, List<RelFieldCollation.Direction> collationDirections,
-      List<RelFieldCollation.NullDirection> collationNullDirections, int fetch, int offset, DataSchema dataSchema,
-      boolean isInputSorted) {
-    this(context, upstreamOperator, collationKeys, collationDirections, collationNullDirections, fetch, offset,
-        dataSchema, isInputSorted, SelectionOperatorUtils.MAX_ROW_HOLDER_INITIAL_CAPACITY,
+  public SortOperator(OpChainExecutionContext context, MultiStageOperator input, SortNode node) {
+    this(context, input, node, SelectionOperatorUtils.MAX_ROW_HOLDER_INITIAL_CAPACITY,
         CommonConstants.Broker.DEFAULT_BROKER_QUERY_RESPONSE_LIMIT);
   }
 
   @VisibleForTesting
-  SortOperator(OpChainExecutionContext context, MultiStageOperator upstreamOperator, List<RexExpression> collationKeys,
-      List<RelFieldCollation.Direction> collationDirections,
-      List<RelFieldCollation.NullDirection> collationNullDirections, int fetch, int offset, DataSchema dataSchema,
-      boolean isInputSorted, int defaultHolderCapacity, int defaultResponseLimit) {
+  SortOperator(OpChainExecutionContext context, MultiStageOperator input, SortNode node, int defaultHolderCapacity,
+      int defaultResponseLimit) {
     super(context);
-    _upstreamOperator = upstreamOperator;
-    _fetch = fetch;
-    _offset = Math.max(offset, 0);
-    _dataSchema = dataSchema;
-    _hasConstructedSortedBlock = false;
+    _input = input;
+    _dataSchema = node.getDataSchema();
+    _offset = Math.max(node.getOffset(), 0);
     // Setting numRowsToKeep as default maximum on Broker if limit not set.
     // TODO: make this default behavior configurable.
-    _numRowsToKeep = _fetch > 0 ? _fetch + _offset : defaultResponseLimit;
+    int fetch = node.getFetch();
+    _numRowsToKeep = fetch > 0 ? fetch + _offset : defaultResponseLimit;
     // Under the following circumstances, the SortOperator is a simple selection with row trim on limit & offset:
-    // - There are no collationKeys
-    // - 'isInputSorted' is set to true indicating that the data was already sorted
-    if (collationKeys.isEmpty() || isInputSorted) {
+    // - There is no collation
+    // - Input is already sorted
+    List<RelFieldCollation> collations = node.getCollations();
+    if (collations.isEmpty() || input instanceof SortedMailboxReceiveOperator) {
       _priorityQueue = null;
       _rows = new ArrayList<>(Math.min(defaultHolderCapacity, _numRowsToKeep));
     } else {
       // Use the opposite direction as specified by the collation directions since we need the PriorityQueue to decide
       // which elements to keep and which to remove based on the limits.
       _priorityQueue = new PriorityQueue<>(Math.min(defaultHolderCapacity, _numRowsToKeep),
-          new SortUtils.SortComparator(collationKeys, collationDirections, collationNullDirections, dataSchema, true));
+          new SortUtils.SortComparator(_dataSchema, collations, true));
       _rows = null;
     }
   }
 
   @Override
+  public void registerExecution(long time, int numRows) {
+    _statMap.merge(StatKey.EXECUTION_TIME_MS, time);
+    _statMap.merge(StatKey.EMITTED_ROWS, numRows);
+  }
+
+  @Override
+  public Type getOperatorType() {
+    return Type.SORT_OR_LIMIT;
+  }
+
+  @Override
+  protected Logger logger() {
+    return LOGGER;
+  }
+
+  @Override
   public List<MultiStageOperator> getChildOperators() {
-    return ImmutableList.of(_upstreamOperator);
+    return List.of(_input);
   }
 
   @Override
   public void cancel(Throwable e) {
   }
 
-  @Nullable
   @Override
   public String toExplainString() {
     return EXPLAIN_NAME;
@@ -109,13 +118,16 @@ public class SortOperator extends MultiStageOperator {
   @Override
   protected TransferableBlock getNextBlock() {
     if (_hasConstructedSortedBlock) {
-      return TransferableBlockUtils.getEndOfStreamTransferableBlock();
+      assert _eosBlock != null;
+      return _eosBlock;
     }
     TransferableBlock finalBlock = consumeInputBlocks();
     // returning upstream error block if finalBlock contains error.
     if (finalBlock.isErrorBlock()) {
       return finalBlock;
     }
+    _statMap.merge(StatKey.REQUIRE_SORT, _priorityQueue != null);
+    _eosBlock = updateEosBlock(finalBlock, _statMap);
     return produceSortedBlock();
   }
 
@@ -126,24 +138,24 @@ public class SortOperator extends MultiStageOperator {
         List<Object[]> row = _rows.subList(_offset, _rows.size());
         return new TransferableBlock(row, _dataSchema, DataBlock.Type.ROW);
       } else {
-        return TransferableBlockUtils.getEndOfStreamTransferableBlock();
+        return _eosBlock;
       }
     } else {
-      LinkedList<Object[]> rows = new LinkedList<>();
-      while (_priorityQueue.size() > _offset) {
+      int resultSize = _priorityQueue.size() - _offset;
+      if (resultSize <= 0) {
+        return _eosBlock;
+      }
+      Object[][] rowsArr = new Object[resultSize][];
+      for (int i = resultSize - 1; i >= 0; i--) {
         Object[] row = _priorityQueue.poll();
-        rows.addFirst(row);
+        rowsArr[i] = row;
       }
-      if (rows.size() == 0) {
-        return TransferableBlockUtils.getEndOfStreamTransferableBlock();
-      } else {
-        return new TransferableBlock(rows, _dataSchema, DataBlock.Type.ROW);
-      }
+      return new TransferableBlock(Arrays.asList(rowsArr), _dataSchema, DataBlock.Type.ROW);
     }
   }
 
   private TransferableBlock consumeInputBlocks() {
-    TransferableBlock block = _upstreamOperator.nextBlock();
+    TransferableBlock block = _input.nextBlock();
     while (block.isDataBlock()) {
       List<Object[]> container = block.getContainer();
       if (_priorityQueue == null) {
@@ -154,8 +166,13 @@ public class SortOperator extends MultiStageOperator {
             _rows.addAll(container);
           } else {
             _rows.addAll(container.subList(0, _numRowsToKeep - numRows));
-            LOGGER.debug("Early terminate at SortOperator - operatorId={}, opChainId={}", _operatorId,
-                _context.getId());
+            if (LOGGER.isDebugEnabled()) {
+              // this operatorId is an old name. It is being kept to avoid breaking changes on the log message.
+              String operatorId =
+                  Joiner.on("_").join(getClass().getSimpleName(), _context.getStageId(), _context.getServer());
+              LOGGER.debug("Early terminate at SortOperator - operatorId={}, opChainId={}", operatorId,
+                  _context.getId());
+            }
             // setting operator to be early terminated and awaits EOS block next.
             earlyTerminate();
           }
@@ -165,8 +182,36 @@ public class SortOperator extends MultiStageOperator {
           SelectionOperatorUtils.addToPriorityQueue(row, _priorityQueue, _numRowsToKeep);
         }
       }
-      block = _upstreamOperator.nextBlock();
+      block = _input.nextBlock();
     }
     return block;
+  }
+
+  public enum StatKey implements StatMap.Key {
+    //@formatter:off
+    EXECUTION_TIME_MS(StatMap.Type.LONG) {
+      @Override
+      public boolean includeDefaultInJson() {
+        return true;
+      }
+    },
+    EMITTED_ROWS(StatMap.Type.LONG), REQUIRE_SORT(StatMap.Type.BOOLEAN) {
+      @Override
+      public boolean includeDefaultInJson() {
+        return true;
+      }
+    };
+    //@formatter:on
+
+    private final StatMap.Type _type;
+
+    StatKey(StatMap.Type type) {
+      _type = type;
+    }
+
+    @Override
+    public StatMap.Type getType() {
+      return _type;
+    }
   }
 }
